# Optio

./: .gitignore  Erdos364.lean  README.md  lake-manifest.json  lakefile.toml  pyproject.toml
.github/workflows/: gate.yml
Erdos364/: Assembly.lean  Assembly14.lean  AxiomAudit.lean  AxiomCheck.lean  BTable.lean  BTableData1e12.lean  BTableData1e14.lean  BTableData1e8.lean  Bridge.lean  C12.lean  C14.lean  Cert.lean  CostAttrib.lean  Defs.lean  Generator.lean  Main.lean  Main14.lean  Mod4.lean  Representation.lean  Sorted.lean  Spike.lean  TableGen.lean  Tiling.lean  Witness.lean
Erdos364/C12/: Chunk000.lean  Chunk001.lean  Chunk002.lean  Chunk003.lean  Chunk004.lean  Chunk005.lean  Chunk006.lean  Chunk007.lean  Chunk008.lean  Chunk009.lean  Chunk010.lean  Chunk011.lean  Chunk012.lean  Chunk013.lean  Chunk014.lean  Chunk015.lean  Chunk016.lean  Chunk017.lean  Chunk018.lean  Chunk019.lean  Chunk020.lean  Chunk021.lean  Chunk022.lean  Chunk023.lean  Chunk024.lean  Chunk025.lean  Chunk026.lean  Chunk027.lean  Chunk028.lean  (+292 more)
data/: c14_specs.json  scan_ledger.jsonl
docs/: COST_ATTRIBUTION.md  ERDOS364_1E14_PLAN.md  ERDOS364_PHASE0.md  ERDOS364_PLAN.md  ERDOS364_PROOF_PLAN.md  PHASE1_MEASUREMENTS.md  PHASE2_LOG.md  PHASE2_OVERNIGHT.md  PHASE5_BTABLE.md  PHASE6_REVALIDATION.md  PHASE8_CLOSEOUT.md
engine/: scan.py
scripts/: attrib_mirror.py  axiom_gate.sh  gen_btable.py  gen_certs.py  gen_certs14.py  gen_certsT.py  gen_lib14.py  gen_spike.py  gen_spike_chunks.py  pod_bootstrap.sh  pod_cert_build.sh  pod_final14.sh  pod_phase7.sh  run_chunks.sh  run_one_chunk.sh
(+3208 files in other folders)
