[project]
name = "optio-engine"
version = "0.1.0"
description = "Erdos 364 scan and cross-validation engine"
requires-python = ">=3.12"
dependencies = ["numpy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["engine"]

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
